@@ -16,7 +16,31 @@ Net::SSLeay::ASN1_ENUMERATED class in L<SPVM> represents L<ASN1_ENUMERATED|https
 
   use Net::SSLeay::ASN1_ENUMERATED;
 
+=head1 Class Methods
+
+C<static method new : L<Net::SSLeay::ASN1_ENUMERATED|SPVM::Net::SSLeay::ASN1_ENUMERATED> ();>
+
 =head1 Instance Methods
+
+=head2 get_int64
+
+Calls native L<ASN1_ENUMERATED_get_int64|https://docs.openssl.org/master/man3/ASN1_INTEGER_get_int64> function given an appropriate argument, the pointer value of the instance, and returns the output value of the first argument.
+
+Exceptions:
+
+If ASN1_ENUMERATED_get_int64 failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
+C<method get_int64 : long ();>
+
+=head2 set_int64
+
+C<method set_int64 : void ($r : long);>
+
+Calls native L<ASN1_ENUMERATED_set_int64|https://docs.openssl.org/master/man3/ASN1_INTEGER_get_int64> function given the pointer value of the instance, $r.
+
+Exceptions:
+
+If ASN1_ENUMERATED_set_int64 failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
 
 =head2 DESTROY
 
@@ -37,4 +61,3 @@ Calls native L<ASN1_ENUMERATED_free|https://github.com/google/boringssl/blob/mas
 Copyright (c) 2024 Yuki Kimoto
 
 MIT License
-
